code/include/physics/orxBody.nim


proc orxBody_SetAllowMoving*(pstBody: ptr orxBODY; bAllowMoving: orxBOOL): orxSTATUS {.
    cdecl, importc: "orxBody_SetAllowMoving", dynlib: "liborx.so".}
## * Gets a body position
##  @param[in]   _pstBody        Concerned body
##  @param[out]  _pvPosition     Position to get
##  @return      Body position / nil
##

proc orxBody_GetPosition*(pstBody: ptr orxBODY; pvPosition: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxBody_GetPosition", dynlib: "liborx.so".}
## * Gets a body rotation
##  @param[in]   _pstBody        Concerned body
##  @return      Body rotation (radians)
##

proc orxBody_GetRotation*(pstBody: ptr orxBODY): orxFLOAT {.cdecl,
    importc: "orxBody_GetRotation", dynlib: "liborx.so".}
## * Gets a body speed
##  @param[in]   _pstBody        Concerned body
##  @param[out]  _pvSpeed        Speed to get
##  @return      Body speed / nil
##

proc orxBody_GetSpeed*(pstBody: ptr orxBODY; pvSpeed: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxBody_GetSpeed", dynlib: "liborx.so".}
## * Gets a body speed at a specified world position
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _pvPosition     Concerned world position
##  @param[out]  _pvSpeed        Speed to get
##  @return      Body speed / nil
##

proc orxBody_GetSpeedAtWorldPosition*(pstBody: ptr orxBODY;
                                     pvPosition: ptr orxVECTOR;
                                     pvSpeed: ptr orxVECTOR): ptr orxVECTOR {.cdecl,
    importc: "orxBody_GetSpeedAtWorldPosition", dynlib: "liborx.so".}
## * Gets a body angular velocity
##  @param[in]   _pstBody        Concerned body
##  @return      Body angular velocity (radians/seconds)
##

proc orxBody_GetAngularVelocity*(pstBody: ptr orxBODY): orxFLOAT {.cdecl,
    importc: "orxBody_GetAngularVelocity", dynlib: "liborx.so".}
## * Gets a body custom gravity
##  @param[in]   _pstBody          Concerned body
##  @param[out]  _pvCustomGravity  Custom gravity to get
##  @return      Body custom gravity / nil is object doesn't have any
##

proc orxBody_GetCustomGravity*(pstBody: ptr orxBODY; pvCustomGravity: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxBody_GetCustomGravity", dynlib: "liborx.so".}
## * Is a body using a fixed rotation
##  @param[in]   _pstBody        Concerned body
##  @return      orxTRUE if fixed rotation, orxFALSE otherwise
##

proc orxBody_IsFixedRotation*(pstBody: ptr orxBODY): orxBOOL {.cdecl,
    importc: "orxBody_IsFixedRotation", dynlib: "liborx.so".}
## * Gets the dynamic property of a body
##  @param[in]   _pstBody        Concerned physical body
##  @return      orxTRUE / orxFALSE
##

proc orxBody_IsDynamic*(pstBody: ptr orxBODY): orxBOOL {.cdecl,
    importc: "orxBody_IsDynamic", dynlib: "liborx.so".}
## * Gets the "allow moving" property of a body, only relevant for non-dynamic bodies
##  @param[in]   _pstBody        Concerned physical body
##  @return      orxTRUE / orxFALSE
##

proc orxBody_GetAllowMoving*(pstBody: ptr orxBODY): orxBOOL {.cdecl,
    importc: "orxBody_GetAllowMoving", dynlib: "liborx.so".}
## * Gets a body mass
##  @param[in]   _pstBody        Concerned body
##  @return      Body mass
##

proc orxBody_GetMass*(pstBody: ptr orxBODY): orxFLOAT {.cdecl,
    importc: "orxBody_GetMass", dynlib: "liborx.so".}
## * Gets a body center of mass (object space)
##  @param[in]   _pstBody        Concerned body
##  @param[out]  _pvMassCenter   Mass center to get
##  @return      Mass center / nil
##

proc orxBody_GetMassCenter*(pstBody: ptr orxBODY; pvMassCenter: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxBody_GetMassCenter", dynlib: "liborx.so".}
## * Sets a body linear damping
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _fDamping       Linear damping to set
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetLinearDamping*(pstBody: ptr orxBODY; fDamping: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxBody_SetLinearDamping", dynlib: "liborx.so".}
## * Sets a body angular damping
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _fDamping       Angular damping to set
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetAngularDamping*(pstBody: ptr orxBODY; fDamping: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxBody_SetAngularDamping", dynlib: "liborx.so".}
## * Gets a body linear damping
##  @param[in]   _pstBody        Concerned body
##  @return      Body's linear damping
##

proc orxBody_GetLinearDamping*(pstBody: ptr orxBODY): orxFLOAT {.cdecl,
    importc: "orxBody_GetLinearDamping", dynlib: "liborx.so".}
## * Gets a body angular damping
##  @param[in]   _pstBody        Concerned body
##  @return      Body's angular damping
##

proc orxBody_GetAngularDamping*(pstBody: ptr orxBODY): orxFLOAT {.cdecl,
    importc: "orxBody_GetAngularDamping", dynlib: "liborx.so".}
## * Is point inside body? (Using world coordinates)
##  @param[in]   _pstBody        Concerned physical body
##  @param[in]   _pvPosition     Position to test (world coordinates)
##  @return      orxTRUE / orxFALSE
##

proc orxBody_IsInside*(pstBody: ptr orxBODY; pvPosition: ptr orxVECTOR): orxBOOL {.
    cdecl, importc: "orxBody_IsInside", dynlib: "liborx.so".}
## * Applies a torque
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _fTorque        Torque to apply
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_ApplyTorque*(pstBody: ptr orxBODY; fTorque: orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxBody_ApplyTorque", dynlib: "liborx.so".}
## * Applies a force
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _pvForce        Force to apply
##  @param[in]   _pvPoint        Point (world coordinates) where the force will be applied, if nil, center of mass will be used
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_ApplyForce*(pstBody: ptr orxBODY; pvForce: ptr orxVECTOR;
                        pvPoint: ptr orxVECTOR): orxSTATUS {.cdecl,
    importc: "orxBody_ApplyForce", dynlib: "liborx.so".}
## * Applies an impulse
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _pvImpulse      Impulse to apply
##  @param[in]   _pvPoint        Point (world coordinates) where the impulse will be applied, if nil, center of mass will be used
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_ApplyImpulse*(pstBody: ptr orxBODY; pvImpulse: ptr orxVECTOR;
                          pvPoint: ptr orxVECTOR): orxSTATUS {.cdecl,
    importc: "orxBody_ApplyImpulse", dynlib: "liborx.so".}
## * Sets self flags of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @param[in]   _u16SelfFlags   Self flags to set
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetPartSelfFlags*(pstBodyPart: ptr orxBODY_PART; u16SelfFlags: orxU16): orxSTATUS {.
    cdecl, importc: "orxBody_SetPartSelfFlags", dynlib: "liborx.so".}
## * Sets check mask of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @param[in]   _u16CheckMask   Check mask to set
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetPartCheckMask*(pstBodyPart: ptr orxBODY_PART; u16CheckMask: orxU16): orxSTATUS {.
    cdecl, importc: "orxBody_SetPartCheckMask", dynlib: "liborx.so".}
## * Gets self flags of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @return Self flags of the body part
##

proc orxBody_GetPartSelfFlags*(pstBodyPart: ptr orxBODY_PART): orxU16 {.cdecl,
    importc: "orxBody_GetPartSelfFlags", dynlib: "liborx.so".}
## * Gets check mask of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @return Check mask of the body part
##

proc orxBody_GetPartCheckMask*(pstBodyPart: ptr orxBODY_PART): orxU16 {.cdecl,
    importc: "orxBody_GetPartCheckMask", dynlib: "liborx.so".}
## * Sets a body part solid
##  @param[in]   _pstBodyPart    Concerned body part
##  @param[in]   _bSolid         Solid or sensor?
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetPartSolid*(pstBodyPart: ptr orxBODY_PART; bSolid: orxBOOL): orxSTATUS {.
    cdecl, importc: "orxBody_SetPartSolid", dynlib: "liborx.so".}
## * Is a body part solid?
##  @param[in]   _pstBodyPart    Concerned body part
##  @return      orxTRUE / orxFALSE
##

proc orxBody_IsPartSolid*(pstBodyPart: ptr orxBODY_PART): orxBOOL {.cdecl,
    importc: "orxBody_IsPartSolid", dynlib: "liborx.so".}
## * Sets friction of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @param[in]   _fFriction      Friction
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetPartFriction*(pstBodyPart: ptr orxBODY_PART; fFriction: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxBody_SetPartFriction", dynlib: "liborx.so".}
## * Gets friction of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @return      Friction
##

proc orxBody_GetPartFriction*(pstBodyPart: ptr orxBODY_PART): orxFLOAT {.cdecl,
    importc: "orxBody_GetPartFriction", dynlib: "liborx.so".}
## * Sets restitution of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @param[in]   _fRestitution   Restitution
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetPartRestitution*(pstBodyPart: ptr orxBODY_PART;
                                fRestitution: orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxBody_SetPartRestitution", dynlib: "liborx.so".}
## * Gets restitution of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @return      Restitution
##

proc orxBody_GetPartRestitution*(pstBodyPart: ptr orxBODY_PART): orxFLOAT {.cdecl,
    importc: "orxBody_GetPartRestitution", dynlib: "liborx.so".}
## * Sets density of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @param[in]   _fDensity       Density
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetPartDensity*(pstBodyPart: ptr orxBODY_PART; fDensity: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxBody_SetPartDensity", dynlib: "liborx.so".}
## * Gets density of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @return      Density
##

proc orxBody_GetPartDensity*(pstBodyPart: ptr orxBODY_PART): orxFLOAT {.cdecl,
    importc: "orxBody_GetPartDensity", dynlib: "liborx.so".}
## * Is point inside part? (Using world coordinates)
##  @param[in]   _pstBodyPart    Concerned physical body part
##  @param[in]   _pvPosition     Position to test (world coordinates)
##  @return      orxTRUE / orxFALSE
##

proc orxBody_IsInsidePart*(pstBodyPart: ptr orxBODY_PART; pvPosition: ptr orxVECTOR): orxBOOL {.
    cdecl, importc: "orxBody_IsInsidePart", dynlib: "liborx.so".}
## * Enables a (revolute) body joint motor
##  @param[in]   _pstBodyJoint   Concerned body joint
##  @param[in]   _bEnable        Enable / Disable
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_EnableMotor*(pstBodyJoint: ptr orxBODY_JOINT; bEnable: orxBOOL): orxSTATUS {.
    cdecl, importc: "orxBody_EnableMotor", dynlib: "liborx.so".}
## * Sets a (revolute) body joint motor speed
##  @param[in]   _pstBodyJoint   Concerned body joint
##  @param[in]   _fSpeed         Speed
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetJointMotorSpeed*(pstBodyJoint: ptr orxBODY_JOINT; fSpeed: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxBody_SetJointMotorSpeed", dynlib: "liborx.so".}
## * Sets a (revolute) body joint maximum motor torque
##  @param[in]   _pstBodyJoint   Concerned body joint
##  @param[in]   _fMaxTorque     Maximum motor torque
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##
